Added Gerens Data

--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
         <a id="quienessomos" class="anchor" href="#quienessomos" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
         Quienes Somos
       </h3>
-      <p>Finintech es una asociación entre Gerens Capital y Acid Labs para crear modelos de negocios innovadores con fuerte base tecnológica en la industria financiera.</p>
+      <p>Finintech es una asociación entre Gerens y <a href="http://www.acidlabs.io">Acid Labs</a> para crear modelos de negocios innovadores con fuerte base tecnológica en la industria financiera.</p>
+
+      <h4>GERENS ECONOMIA, FINANZAS Y GESTION S.A.</h4>
+      <p>GERENS, es una empresa de asesorías económicas, financieras y de gestión chilena fundada en 1994. Su objetivo es entregar, especialmente a pequeñas y medianas empresas, soluciones integrales en el área financiera aprovechando las nuevas tecnologías. </p>
+
+      <h5>PATRICIO ARRAU PONS</h5>
+      <p>Doctor en Economía de la Universidad de Pennsylvania e Ingeniero Comercial de la Universidad de Chile. Es además socio fundador de Gerens Economía Finanzas y Gestión S.A. consultora privada, donde le ha correspondido liderar diversas tareas de banca de inversión, entre las que se encuentran valorización de compañías de diversos sectores de la economía, procesos de venta de activos y reestructuración de pasivos. Ha trabajado para el Ministerio de Hacienda de Chile y para el Banco Mundial.</p>
+
+      <h5>JOSE GATICA ORTIZ</h5>
+      <p>Contador Auditor, es Gerente General en Gerens Economía Finanzas y Gestión S.A. También se desempeña desde el año 2010 como Gerente General en Gerens Capital S.A. Administradora de Fondos de Inversión Privados. Es Gerente de Administración y Finanzas y director de las empresas en que los Fondos han invertido.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"> Todos los derechos reservados.</span>
